--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-native": "^3.10.0",
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "^2.3.0",
