Create Tailwind Theme and add Font support

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -32,6 +33,7 @@
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "autoprefixer": "^9",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -43,7 +45,9 @@
     "eslint-plugin-react-native": "^3.10.0",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "postcss": "^7",
     "prettier": "^2.3.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~4.0.0"
   },
   "private": true,
