--- a/package.json
+++ b/package.json
@@ -9,29 +9,38 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@absinthe/socket": "^0.2.1",
+    "@absinthe/socket-apollo-link": "^0.2.1",
     "@apollo/client": "^3.3.16",
+    "@jumpn/utils-graphql": "^0.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "apollo-link": "^1.2.14",
     "dotenv": "^9.0.2",
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.0",
+    "phoenix": "^1.5.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
+    "subscriptions-transport-ws": "^0.9.18",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/absinthe__socket": "^0.2.1",
+    "@types/absinthe__socket-apollo-link": "^0.2.1",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
